# journey-weather

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  pyproject.toml
postgresql-init/: 1-create-databases.sql
scripts/: dev-utils.sh
src/: manage.py
src/config/: development.py  local.py
src/config/base_conf/: __init__.py  _base.py  database.py  django.py  localization.py  routing.py
src/core/: settings.py
