[project]
name = "journey-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.14",
    "dj-database-url>=2.3.0",
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "python-decouple>=3.8",
    "ruff>=0.11.10",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
